corpus/types.txt
============
primitive
============
processor MyProc {
  input value int thing;
  input value int32 thing;
  input value int64 thing;
  input value float thing;
  input value float32 thing;
  input value float64 thing;
  input value complex thing;
  input value complex32 thing;
  input value complex64 thing;
  input value bool thing;
  input value void thing;
}

------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))))



==============
limited
==============

processor MyProc {
  input value wrap<64> thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (limited_type)
      (identifier))))



==============
identifier
==============

processor MyProc {
  input value MyThing thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (identifier)
      (identifier))))


==============
qualified identifier
==============

processor MyProc {
  input value Foo::Bar::MyThing thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (qualified_identifier
        (identifier)
        (identifier)
        (identifier))
      (identifier))))


============
primitive array
============

processor MyProc {
  input value int[64] thing;
}

------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))))



==============
limited array
==============

processor MyProc {
  input value wrap<64>[128] thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (limited_type)
      (identifier))))



==============
identifier array
==============

processor MyProc {
  input value MyThing[64] thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (identifier)
      (identifier))))


==============
qualified identifier array
==============

processor MyProc {
  input value Foo::Bar::MyThing[64] thing;
}

--------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (qualified_identifier
        (identifier)
        (identifier)
        (identifier))
      (identifier))))


===================
multi-dimensional array
===================
processor MyProc {
  input value int[10,10,10] thing;
}

------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))))


===================
c-style multi-dimensional array
===================
processor MyProc {
  input value int[10][10][10] thing;
}

------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (primitive_type)
      (identifier))))



===================
Endpoint type list
===================
processor MyProc {
  input value (int, MyStruct, wrap<64>) manyIn;
}

-------------------
(source_file
  (processor_declaration
    (identifier)
    (io_statement
      (io_direction)
      (io_type)
      (endpoint_type_list
        (primitive_type)
        (identifier)
        (limited_type))
      (identifier))))
